--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -3,6 +3,8 @@ server {
     index index.php index.html;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
+
+    # carpeta pública de Laravel
     root /var/www/public;
 
     location / {
@@ -12,13 +14,10 @@ server {
 
     location ~ \.php$ {
         try_files $uri =404;
-        include fastcgi_params;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-
-        # 👉 php-fpm dentro del mismo contenedor
-        fastcgi_pass 127.0.0.1:9000;
-
+        fastcgi_pass 127.0.0.1:9000;   # 👈 mismo contenedor, NO "app:9000"
         fastcgi_index index.php;
+        include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
